[package]
name = "pi-watch"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
glob = "0.3"
log = "0.4"
snafu = "0.6"
systemstat = "0.1"
tokio = { version = "0.2", features = ["full"] }
