[package]
name = "pi-watch"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
futures = "0.3.4"
glob = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"
tokio = { version = "1.13", features = ["full"] }
